# bin-reader

./: CMakeLists.txt  README.md  build.sh
.github/workflows/: ci.yml
docs/: cmd.md
src/: AppState.cpp  AppState.hpp  BinaryEditor.cpp  BinaryEditor.hpp  Command.cpp  Command.hpp  EditorController.cpp  EditorController.hpp  EditorView.cpp  EditorView.hpp  EventHandlers.cpp  EventHandlers.hpp  UIComponents.cpp  UIComponents.hpp  Utils.hpp  main.cpp
tests/: test_app_state.cpp  test_binary_editor_read_base_type.cpp  test_binary_editor_read_string.cpp  test_events.cpp  test_integration.cpp  test_main.cpp  test_ui_components.cpp
tests/data/: HelloWorld.java  capture.pcap
